// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser additive expressions parses left-associative addition chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 1,
          },
        },
        "right": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 2,
          },
        },
        "token": Object {
          "kind": 8,
          "line": 1,
          "text": "+",
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 8,
        "line": 1,
        "text": "+",
      },
    },
  },
]
`;

exports[`parser additive expressions parses left-associative subtraction chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 1,
          },
        },
        "right": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 2,
          },
        },
        "token": Object {
          "kind": 7,
          "line": 1,
          "text": "-",
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 7,
        "line": 1,
        "text": "-",
      },
    },
  },
]
`;
